# simple-timer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/master/: main_logic.h
include/master/gui/: layouts.h
include/timer/: constants.h  options.h  timestamp_interaction.h
include/timer/audio/: data_callback.h
include/timer/gui/: layouts.h
src/master/: main.c  main_logic.c
src/master/gui/: layouts.c
src/timer/: main.c  main_logic.c  options.c  timestamp_interaction.c
src/timer/audio/: data_callback.c
src/timer/gui/: layouts.c
